Added exercises about numerals

--- a/fp2017/exercises1.asciidoc
+++ b/fp2017/exercises1.asciidoc
@@ -87,19 +87,63 @@ isPrime n = iterate 2 where
 
 . *Дополнительная задача*
   Опишите функцию `c n`, которая для данного целого числа `n` вычисляет, сколько есть способов представить данное число, как сумму нескольких различных положительных чисел, причем все числа должны быть попарно взаимно простыми.
+
+  NOTE: Эту задачу можно решать используя списки, а можно придумывать формулу.
+  
+  Пример вызова:
   +
-  Замечание: Эту задачу можно решать используя списки, а можно придумывать формулу.
-  ** Пример вызова:
-  +
-     `с 10` - должно получиться 6, потому что есть 6 таких последовательностей (`1 2 7`, `1 4 5`, `1 9`, `2 3 5`, `3 7`, `10`).
+  `с 10` - должно получиться 6, потому что есть 6 таких последовательностей (`1 2 7`, `1 4 5`, `1 9`, `2 3 5`, `3 7`, `10`).
   +
 
+Задачи про зависимые типы (вернее про их отсутствие)
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+Для решeния необходимо знать, что такое кортеж (англ. *tuple*)
+
+Также используется понятие вложенных пар -- это когда в паре один из элементов тоже пара, а в нём один из элементов снова пара, и т.д. Например, бывают проавориентированные вложенные пары `(a,(b,(c,d)))` и левоориентированные -- `(((a,b),c),d)`.
 
 
-[[week2]]
-Неделя 2 (11 сентября)
-----------------------
-Списки и всё с ними связанное.
+- Научиться описывать функции, которые делают из некаррированной функции каррированную:
+[source,haskell]
+----
+un    :: (a -> b) -> (a -> b)
+deux  :: ((a,b) -> c) -> (a -> b -> c)
+trois :: ((a,(b,c)) -> d) -> (a -> b -> c -> d)
+----
+И т.д. до бесконечности.
+
+- Из каррированной -- в некаррированную
+[source,haskell]
+----
+un    :: (a -> b) -> (a -> b)
+deux  :: (a -> b -> c) -> (a,b) -> c
+trois :: (a -> b -> c -> d) -> (a,(b,c)) -> d
+----
+- Извлечение самого глубокого элемента
+[source,haskell]
+----
+deux  :: (a,b) -> (b,a)
+trois :: (a,(b,c)) -> c,(a,b)
+----
+- Применение вложенных пар функций в одному значению
+[source,haskell]
+----
+un    :: a -> (a->b) -> b
+deux  :: a -> (a->b, a->c) -> (b,c)
+trois :: a -> (a->b, (a->c, a->d)) -> (b,(c,d))
+----
+
+Реализация от трех и дальше должна получиться синтаксически одинаковой для всех задач выше
+
+- Задача от Олега (посложнее)
++
+Научиться описывать функции, которые принимают произвольное количество аргументов и складывают их в список.
+[source,haskell]
+----
+smth1 un    1     -- [1]
+smth2 deux  1 2   -- [1,2]
+smth3 trois 1 2 3 -- [1,2,3]
+----
 
 
 ////
