Exercises about IO

--- a/fp2017/exercises3.asciidoc
+++ b/fp2017/exercises3.asciidoc
@@ -7,7 +7,17 @@
 :Author: Dmitrii Kosarev aka Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
 
-[[week2]]
-Неделя 3
---------
-Упражнений пока нет
+Упражнения про ввод-вывод
+-------------------------
+В задачах про тилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.
+
+- Реализовать `hcat`: UNIX утилиту `cat` на Haskell.
++
+Без аргументов комндной строки она должна читать строки с `stdin` и сразу печатать их.
++
+Аргументы командной строки должны считаться именами файлов и `hcat` печатает содержимое этих файлов.
+- То же для утилиты `grep`.
++
+Чтобы было совсем круто, надо совпадения выделять цветом.
+
+NOTE: Не все эмуляторы терминала поддерживают цвета!
