--- a/fp2017/index.asciidoc
+++ b/fp2017/index.asciidoc
@@ -30,28 +30,32 @@ GHC и WinHugs и как ими пользоваться:
   Работает для Windows, Linux и Mac. Для курса будет достаточно минимального варианта установки.
 * В Haskell Platorm есть простые среды разработки GHCi и WinGHCi. Вот краткая инструкция о том, как начать с ними работать.
 
-Ссылки
+Книги
 ~~~~~
 http://learnyouahaskell.com/[Learn You a Haskell for Freat Good]
+
+Ссылки
+~~~~~~
+https://vimeo.com/153042584[Yaron Minsky - Why OCaml]. Хорошо для общего развития: какие языки бывают, что от хорошего языка программирования требуется, и т.д.
+
+http://queue.acm.org/detail.cfm?id=2038036[OCaml for the Masses] Большинстов аргументов переносимо и на Haskell.
+
+
 
 [[week1]]
 Неделя 1
 --------
 Введение. Рекурсивные функции над числами
 
-link:exercises1.html[Упражнения]
+link:exercises1.html[Упражнения 1]
 
 [[week2]]
 Неделя 2 (11 сентября)
 ----------------------
-Списки и всё с ними связанное.
 
-link:exercises2.html[Упражнения]
+link:exercises2.html[Упражнения 2 (Списки и прочее)]
 
-[[week3]]
-Неделя 3
---------
-Типы данных
+link:exercises3.html[Упражнения 3 (Про IO)]
 
 
 ////
