--- a/fp2017/exercises1.asciidoc
+++ b/fp2017/exercises1.asciidoc
@@ -89,7 +89,7 @@ isPrime n = iterate 2 where
   Опишите функцию `c n`, которая для данного целого числа `n` вычисляет, сколько есть способов представить данное число, как сумму нескольких различных положительных чисел, причем все числа должны быть попарно взаимно простыми.
 
   NOTE: Эту задачу можно решать используя списки, а можно придумывать формулу.
-  
+
   Пример вызова:
   +
   `с 10` - должно получиться 6, потому что есть 6 таких последовательностей (`1 2 7`, `1 4 5`, `1 9`, `2 3 5`, `3 7`, `10`).
@@ -102,6 +102,7 @@ isPrime n = iterate 2 where
 
 Также используется понятие вложенных пар -- это когда в паре один из элементов тоже пара, а в нём один из элементов снова пара, и т.д. Например, бывают проавориентированные вложенные пары `(a,(b,(c,d)))` и левоориентированные -- `(((a,b),c),d)`.
 
+В этих задачах не нужно описывать функции для случаев раз, два и три. Нужно предъявить метод, которым можно получать такие функции не приходя в сознание. В задачах про типы данных будет подсказка.
 
 - Научиться описывать функции, которые делают из некаррированной функции каррированную:
 [source,haskell]
