--- a/fp2017/exercises3.asciidoc
+++ b/fp2017/exercises3.asciidoc
@@ -9,7 +9,9 @@
 
 Упражнения про ввод-вывод
 -------------------------
-В задачах про тилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.
+В задачах про утилиты UNIX не надо делать переписывать со всеми фичами исходной программы, достаточно передать суть.
+
+Для облегчения написания, возможно, стоит прочитать про `do`-нотацию.
 
 - Реализовать `hcat`: UNIX утилиту `cat` на Haskell.
 +
@@ -21,3 +23,18 @@
 Чтобы было совсем круто, надо совпадения выделять цветом.
 
 NOTE: Не все эмуляторы терминала поддерживают цвета!
+
+- Реализовать аналог утилиты `ncal`, которая показывает календарь на данный месяц. Это упраженение скорее на форматирование вывода.
+Выделите, пожалуйста, текущий день цветом.
++
+https://wiki.haskell.org/Getting_the_current_date
++
+  $ ncal
+      September 2017
+  Su     3 10 17 24
+  Mo     4 11 18 25
+  Tu     5 12 19 26
+  We     6 13 20 27
+  Th     7 14 21 28
+  Fr  1  8 15 22 29
+  Sa  2  9 16 23 30
