--- a/fp2017/exercises4.asciidoc
+++ b/fp2017/exercises4.asciidoc
@@ -3,17 +3,33 @@
 :local-css-style: pastie
 :stylesheet: ./stylesheets/material-teal.css
 
-Задачи второй недели
-====================
+Задачи к третьей неделе
+=======================
 :Author: Dmitrii Kosarev aka Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
 
-Про списки
-----------
+Про типы данных
+---------------
 
-Задачи от М.Симуни
-~~~~~~~~~~~~~~~~~~
-Составлены М.Симуни (simuni@mail.ru). Вы можете свободно копировать и воспроизводить эти задачи, при условии сохранения ссылки на составителя.
+// Задачи от М.Симуни
+// ~~~~~~~~~~~~~~~~~~
+// Составлены М.Симуни (simuni@mail.ru). Вы можете свободно копировать и воспроизводить эти задачи, при условии сохранения ссылки на составителя.
 
-[arabic, start=1]
-.. 111
+
+=== Про https://hackage.haskell.org/package/base-4.10.0.0/docs/Data-Maybe.html[`Maybe`]
+
+.. Описать функцию которая принимает функцию `f` несколько (пусть 3 или 4) значения типа `Maybe _` и возвращает
+  - `Nothing` если хотя бы один из них `Nothing`
+  - Применяет `f`  от данных, которые спрятаные внутри `Maybe`
++
+Решение должно быть лаконичное.
+
+.. Та же задача, но вместо нескольких аргументов -- список из `Maybe _`.
+
+=== Про двоичные деревья
+
+Опишем тип дерева
+[source,haskell]
+----
+data Tree a = Leaf | Node a (Tree a) (Tree a)
+----
