Updated tasks about data types

--- a/fp2017/index.asciidoc
+++ b/fp2017/index.asciidoc
@@ -62,7 +62,7 @@ link:exercises3.html[Упражнения 3 (Про IO)]
 [[week3]]
 Неделя 3 (18 сентября)
 ----------------------
-link:exercises4.html[Упражнения 4 (Про типы данных) их пока нет]
+link:exercises4.html[Упражнения 4 (Про типы данных)]
 
 
 ////
