--- a/fp2017/index.asciidoc
+++ b/fp2017/index.asciidoc
@@ -72,14 +72,11 @@ link:exercises4.html[Упражнения 4 (Про типы данных)]
 Неделя 4 (25 сентября)
 ----------------------
 
-Упражнений на этоу неделю я обещал не задавать. Если кто-то всё зарешал, то выкладывайте на гитхаб решения, я попробую к чему-нибудь придраться.
+Упражнений на эту неделю я обещал не задавать. Если кто-то всё зарешал, то выкладывайте на гитхаб решения, я попробую к чему-нибудь придраться.
 
 [[week5]]
 Неделя 5 (2 октября)
 --------------------
-
-
-
 
 ////
 [glossary]
