Extend CPS examples

--- a/fp2017/exercises5cps.asciidoc
+++ b/fp2017/exercises5cps.asciidoc
@@ -17,4 +17,8 @@
 
 . Аналогично предыдущему, fold через foldr.
 
-. Опишите ADT для арифметики: там должны быть константы-числа и бинарные операции сложения и вычитания. Реализуйте функцию `eval`, которая вычисляет выражение в число, так, чтобы не расходовался стек.
+. Спроектируйте `fold` для списков так, чтобы при вычислении можно было прерваться. Например, мы перемножаем спиок чисел; встретив 0 нужно остановиться и выдать ответ.
+
+. Опишите ADT для арифметики: там должны быть константы-числа, переменные и бинарные операции сложения и вычитания. Реализуйте функцию `eval`, которая принимает начальные значения некоторых переменных и вычисляет выражение в число. Функция `eval` не должна сильно расходовать стек.
+
+. Для предыдущего типа данные реализуйте функцию `simplify`, которая будет упрощать выражение, пока оно упрощается. Виды упрощений: операции над константами, умножение на ноль, вычитание из самого себя, common subexpression elimination, etc.
