--- a/fp2017/exercises4.asciidoc
+++ b/fp2017/exercises4.asciidoc
@@ -21,6 +21,8 @@
 . Описать функцию которая принимает функцию `f` несколько (пусть 3 или 4) значения типа `Maybe _` и возвращает
   - `Nothing` если хотя бы один из них `Nothing`
   - Применяет `f`  от данных, которые спрятаные внутри `Maybe`
+
+NOTE: OK google, billion-dollar mistake.
 +
 Решение должно быть лаконичное.
 
