--- a/fp2017/exercises1.asciidoc
+++ b/fp2017/exercises1.asciidoc
@@ -120,13 +120,22 @@ un    :: (a -> b) -> (a -> b)
 deux  :: (a -> b -> c) -> (a,b) -> c
 trois :: (a -> b -> c -> d) -> (a,(b,c)) -> d
 ----
-- Извлечение самого глубокого элемента
+- Удаление самого глубокого элемента и приписывание его слева от пары.
+
 [source,haskell]
 ----
 deux  :: (a,b) -> (b,a)
 trois :: (a,(b,c)) -> c,(a,b)
 ----
-- Применение вложенных пар функций в одному значению
+
+Упрощенный вариант: извлечения самого глубокого элемента и отбрасывание остальных. Получается композицией `fst` и решения предыдущей задачи.
+[source,haskell]
+----
+deux  :: (a,b) -> b
+trois :: (a,(b,c)) -> c
+----
+
+- Применение вложенных пар функций в одному значению.
 [source,haskell]
 ----
 un    :: a -> (a->b) -> b
