more simuni tasks

--- a/fp2017/exercises6.asciidoc
+++ b/fp2017/exercises6.asciidoc
@@ -8,6 +8,8 @@
 :Author: Dmitrii Kosarev aka Kakadu
 :email:  Dmitrii.Kosarev@protonmail.ch
 
+Среди задач есть от М.Симуни (simuni@mail.ru). Можете свободно копировать и воспроизводить эти задачи, при условии сохранения ссылки на составителя.
+
 === Несколько задач про списки
 
 . Даны два потенциально бесконечных списка. Опишите функцию с типом `[a] -> [a] -> [a]` которая сольет два списка в один.
@@ -19,6 +21,11 @@
 . Используя бесконечные списки найдите простые числа с помощью решета Эратосфена.
 +
 *ВНИМАНИЕ, СПОЙЛЕР*. Меня спрашивали в прошлый раз как это делать. О, это очень просто: нужная одна дополнительная функция, которая будет принимать список и фильтровать его хвост, проверяя делимость на голову.
+
+. Задача от М.Симуни. Опишите `fives`, как бесконечный список [5,55,555,5555,...] – т.е. список из целых положительных чисел, у которых все цифры равны 5.
++
+  - Пример вызова: `take 7 fives `
+  - Ответ должен быть равен [5,55,555,5555,55555,555555,5555555]
 
 === Про исчисление высказываний
 
