--- a/fp2017/exercises_all.asciidoc
+++ b/fp2017/exercises_all.asciidoc
@@ -223,3 +223,119 @@ asdfasd
     Результат должен быть равен `Node (35,1) (Node (12,2) Empty Empty) (Node (70,3) Empty Empty)`
   - `zipWithTree (Node 35 (Node 12 Empty Empty) (Node 70 Empty Empty)) [1,2]`
     Результат должен быть равен `Node (35,1) (Node (12,2) Empty Empty) Empty`
+
+.. Опишите `fives`, как бесконечный список [5,55,555,5555,...] – т.е. список из целых положительных чисел, у которых все цифры равны 5.
++
+  - Пример вызова: `take 7 fives `
+  - Ответ должен быть равен [5,55,555,5555,55555,555555,5555555]
+
+.. *Задача про тридевятое царство*
+В тридевятом царстве жизнь так устроена, что за все надо платить.. Поэтому, в частности, все функции имеют свою цену. И поэтому в тридевятом царстве не бывает, чтобы функция возвращала число, она всегда возвращает пару (ответ, цена). Вот примеры функций, которые там пишут:
+
+  - sin39 x = (sin x, 2)
+  - exp39 x = (exp x, 5)
+  - f x = (x*x+5, 10)
++
+Напишите функцию calculate, которая берет на вход список таких функций и число, вызывает все эти функции справа налево и возвращает пару (итоговое значение, итоговая цена).
+
+  - Пример вызова: `calculate [sin39,exp39,f] 1`
+  - Результат должен быть равен (sin(exp(1*1+5)), 17)
+
+.. В задаче надо написать две функции.
++
+`sumDiv n` должна вернуть сумму всех делителей числа n, считая 1, но не считая самого n.
+
+  - Пример вызова: sumDiv 12
+  - Ответ должен быть равен 1+2+3+4+6=16
++
+`amicables n`, которая возвращает список всех пар дружественных чисел, каждое из которых меньше или равно n.
+
+  - Пример вызова: amicables 1000
+  - Ответ должен быть равен [(220,284)]
++
+Справка: Числа a и b называется дружественными, если a равно сумме делителей b, а b равно сумме делителей a.
++
+Замечания:
+  - Для единообразия давайте включать в список только те пары, в которых первое число меньше второго, и пары должны идти в порядке возрастания первых чисел пары.
+  - Дружественных чисел довольно мало, и, возможно, самым оптимальным было бы просто выписать все известные пары, скажем, до 1000000. Но, пожалуйста, давайте в это задаче этого не делать. Т.е. дополнительное условие - не использовать заранее подготовленные данные о дружественных числах.
+
+.. Описать бесконечный список cantor , содержащий все пары целых положительных чисел (каждую по одному разу).
+Пример вызова: take 100 cantor
+Что получится, не могу сказать, потому что вы можете выбирать разные порядки обхода, но, например, что-то вроде [(1,1), (1,2), (2,2), (2,1), (1,3) и т.д.
+
+.. Описать функцию generalizedCantor с одним параметром n, которая возвращает бесконечный список, содержащий все возможные списки из n целых положительных чисел (каждый список по одному разу).
++
+Пример вызова: take 100 (generalizedCantor 3)
++
+Что при этом получится, не могу сказать, потому что вы можете выбирать разные порядки обхода, но начало, видимо, будет [[1,1,1], [1,1,2], и т.д.
+
+.. Описать функцию bigCos c параметром x, которая возвращает первый элемент в последовательности cos 1, cos 2, cos 3, cos 4, ... , который больше или равен x.
++
+Дополнительное условие: нельзя определять свои функции (кроме bigCos, конечно). Можно использовать любые стандартные функции и лямбда выражения.
++
+Пример вызова: bigCos 0.99 результат должен быть равен примерно 0.9912028
++
+Замечания:
+  - очевидная подсказка: тут, конечно, удобно использовать бесконечные списки. Но можно и без них, наверное.
+
+
+.. Пусть в списке я записал последовательность чисел - сколько денег я тратил каждый день в этом году. Запись я начал, конечно же, с понедельника.
++
+Кроме этого я дал себе слово - по будним дням тратить не больше 300 р в день, а по выходным - не больше 1000 р. в день.
+Опишите функцию checkMyRules у которой параметр - такой список расходов, и которая проверяет, выполнил ли я свои собственные правила.
++
+Примеры вызова:
+  - `checkMyRules [100,200,150,250,100,200,800,100,300,200] `
+  - Ответ должен быть равен True.
+  - checkMyRules [100,200,150,250,100,200,800,100,600,200]
+  - Ответ должен быть равен False, потому что во второй вторник я потратил больше 200 р.
++
+Замечание:
+  - В этой задаче можно (но не обязательно) использовать зацикленный список
+
+.. Опишите brackets, как бесконечный список из строк, вот такой: ["[]","[[]]","[[[]]]","[[[[]]]]"...]
++
+Дополнительное условие: В этой задаче обязательно надо использовать прием "завязывание в узел"
+
+  - Пример вызова: `take 4 brackets`
+  - Результат должен быть равен `["[]","[[]]","[[[]]]","[[[[]]]]"]`
++
+Напоминание: строки в Haskell - это списки символов. То есть, к ним можно применять операции :, ++ и другие функции для списков.
+
+
+.. *Еще одна задача про тридевятое царство* Из двух частей
++
+Описать оператор <=< который работает так же, как оператор . (композиция функций), но только для функций, которые возвращают пару (результат, цена).
++
+Например, если у нас есть функции `sin39 x = (sin x, 2)`, `cos39 x = (cos x, 3)` и потом мы напишем `f = cos39 <=< sin39`
+то f должна для x возвращать пару `(cos(sin x),5)`
++
+Описать функцию calculate из задачи 15-4 с помощью `foldr` и оператора <=<
++
+Подсказка: определение calculate, скорее всего, будет выглядеть как-то так:
+`calculate fs = foldr (<=<) ...какая то функция.. fs`
++
+Примеры вызова:
+
+  - `let { f x = (2*x, 1); g = f <=< а } in g 10`
+  - Результат должен быть равен `(40,2)`
+  - `let f x = (2*x,1) in calculate [f,f,f] 1`
+  - Результат должен быть равен `(8,3)`
+
+.. Описать функцию superMap, которая похожа на map, но только позволяет заменять элемент в списке не на один, а на несколько.
++
+Пример вызова: `superMap (\x -> [sin x, cos x]) [1,2,3]`
+Должен получиться список `[sin 1, cos 1, sin 2, cos 2, sin 3, cos 3].`
++
+Замечание: На самом деле, в Haskell есть сразу две стандартные функции, которые делают точно то же, что superMap. Но даже если вы знаете, как они называются, в этом задании вы, пожалуйста, их не используйте. Все остальные стандартные функции использовать можно.
+
+.. Описать функцию allLists с двумя параметрами n и k, которая возвращает список из всех списков длины k, которые можно составить из чисел 1..n.
++
+Пример вызова: `allLists 3 2 `
+Должно получиться: `[[1,1],[1,2],[1,3],[2,1],[2,2],[2,3],[3,1],[3,2],[3,3]]` (не обязательно именно в таком порядке).
++
+Замечания:
+
+  - В общем случае в списке должно быть, понятно, n^k элементов.
++
+Подсказка: Я бы советовал использовать list comprehension, получится очень просто.
